--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -4,6 +4,6 @@ footer {
     width: 100%;
     align-items: center;
     text-align: center;
-    position: absolute;
+    position: relative;
     bottom: 0;
 }
